--- a/css/mapa_esri.css
+++ b/css/mapa_esri.css
@@ -1,3 +1,8 @@
-.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} 
+.embed-container1 {position: relative; padding-bottom: 50%; height: 0; max-width: 100%;} 
+.embed-container1 iframe,
+.embed-container1 object,.embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height:100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}
+
+
+.embed-container {position: relative; padding-bottom: 100%; height: 0; max-width: 100%;} 
 .embed-container iframe,
-.embed-container object,.embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}
+.embed-container object,.embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height:100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}
